Fix overflow issue with searching

--- a/client/src/components/shared/tab/Tab.css
+++ b/client/src/components/shared/tab/Tab.css
@@ -44,5 +44,4 @@
   flex: 1;
   min-height: 0;
   padding: 16px;
-  overflow-y: auto;
 }
